# realtime-video-inference

./: README.md  pyproject.toml
core_pipeline/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_grpc.sh  requirements.txt
core_pipeline/inference_service/: health_check.py  inference_pb2.py  inference_pb2_grpc.py  server.py
core_pipeline/protos/: inference.proto
core_pipeline/streaming_simulator/: consumer.py  producer.py
enhanced_pipeline/: .env.example  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  main.py  requirements.txt  setup_model.py
enhanced_pipeline/api/: endpoints.py  websockets.py
enhanced_pipeline/model_repository/resnet18/: config.pbtxt
enhanced_pipeline/static/: app.js  index.html
