[project]
name = "realtime-video-inference-2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi[standard]>=0.116.1",
    "grpcio>=1.67.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.1.0",
    "protobuf>=5.29.5",
    "pydantic-settings>=2.10.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tritonclient[all]>=2.59.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.67.1",
    "matplotlib>=3.10.3",
]
